changed folder structure

--- a/code/index.html
+++ b/code/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
-        <img src="tree.png" alt="Logo">
+        <img src="img/tree.png" alt="Logo">
         <h1>National park news</h1>
         <nav>
           <a href="index.html" class="active">Home</a>
@@ -24,7 +24,7 @@
     <section class="big-news">
       <!-- The big news content -->
       <div class="flex-child">
-        <img src="yellowstone.jpg" alt="yellowstone">
+        <img src="img/yellowstone.jpg" alt="yellowstone">
       </div>
       <div class="flex-child news-button">
         <h2>National park photo competition 2022</h2>
@@ -37,17 +37,17 @@
     <section class="news-grid">
       <!-- The other news  -->
       <div class="news-grid-child">
-        <img src="buffalo.jpg" alt="A buffalo">
+        <img src="img/buffalo.jpg" alt="A buffalo">
         <h3>Three people attacked by bison in Yellowstone</h3>
         <p>6th of Aug 2022: So far this year three people has been attacked by a bison in yellowstone.</p>
       </div>
       <div class="news-grid-child">
-        <img src="smoke.jpg" alt="smoke">
+        <img src="img/smoke.jpg" alt="smoke">
         <h3>A new Geyser found in Yellowstone</h3>
         <p>A new geyser was found in Yellowstone the 5th of Aug 2022. It is one of the biggest ever found. Read to learn more...</p>
       </div>
       <div class="news-grid-child">
-        <img src="grand-canyon.jpg" alt="Grand Canyon">
+        <img src="img/grand-canyon.jpg" alt="Grand Canyon">
         <h3>Grand Canyon</h3>
         <h4>Face Masks Are Required Indoors (CDC High Community Levels) Thursday, August 4, 2022</h4>
         <p>
@@ -55,37 +55,37 @@
           Face masks are required for all individuals over the age of 2 years (regardless of vaccinations status) in park buildings, and on public transportation. Please bring masks with you for your family or group.</p>
       </div>
       <div class="news-grid-child">
-        <img src="yosemite-clouds.jpg" alt="Cloudy Yosemite">
+        <img src="img/yosemite-clouds.jpg" alt="Cloudy Yosemite">
         <h3>No sun in yosemite for a whole month</h3>
         <p>Yosemite has been cloudy for a whole month. Here's why.</p>
       </div>
       <div class="news-grid-child">
-        <img src="mount-rushmore.jpg" alt="Mount Rushmore">
+        <img src="img/mount-rushmore.jpg" alt="Mount Rushmore">
         <h3>Mount Rushmore National Memorial closed due to severe weather</h3>
         <p>Mount Rushmore National Memorial closed down due to severe weather the 22nd of June 2022. The park will reopen for visitors the 25th of June.</p>
       </div>
       <div class="news-grid-child">
-        <img src="baby-bear.jpg" alt="A baby bear">
+        <img src="img/baby-bear.jpg" alt="A baby bear">
         <h3>Baby bear spotted in Pikes peak 30th of June 2022</h3>
         <p>A baby bear has been spotted close to Pikes peak in the end June 2022. Be mommy bear aware!</p>
       </div>
       <div class="news-grid-child">
-        <img src="yellowstone-hot-spring.jpg" alt="Hot spring">
+        <img src="img/yellowstone-hot-spring.jpg" alt="Hot spring">
         <h3>Floodings in Yellowstone</h3>
         <p>An unprecedented flood hit Yellowstone National Park on June 13, 2022. The catastrophic event was caused by a combination of unusually heavy rains and rapid snowmelt. The high and fast water flows destroyed bridges and swept away entire roadways, leaving communities and homes isolated.</p>
       </div>
       <div class="news-grid-child">
-        <img src="stars.jpg" alt="stars">
+        <img src="img/stars.jpg" alt="stars">
         <h3>The stars and the National Parks</h3>
         <p>Read about the best places in US National Parks to star watch.</p>
       </div>
       <div class="news-grid-child">
-        <img src="niagara-falls.jpg" alt="Niagara falls">
+        <img src="img/niagara-falls.jpg" alt="Niagara falls">
         <h3>Niagara Falls rainbow lights</h3>
         <p>Hundreds of LED lights are housed in three locations across the Niagara Gorge in Niagara Falls, Ontario. Together, these lights work to create a breathtaking view not to be missed, and are illuminated every night of the year beginning at dusk.</p>
       </div>
       <div class="news-grid-child">
-        <img src="mountain.jpg" alt="Snowy mountain">
+        <img src="img/mountain.jpg" alt="Snowy mountain">
         <h3>Rocky Mountain ski resort season 2021/2022 cancelled</h3>
         <p>The ski season of 2021/2022 is yet again cancelled due to high covid community levels.</p>
       </div>
