removed unneccesary classes

--- a/new code/index.html
+++ b/new code/index.html
@@ -36,6 +36,7 @@
           </ul>
         </nav>
       </div>
+      <!-- Subscribe button for all devices -->
       <button class="subscribe" type="button">Subscribe</button>
     </header>
 
@@ -59,7 +60,7 @@
 
       <div class="grid-item">
         <div class="news html">
-          <img class="html-logo" src="html-logo.png" alt="html-logo" />
+          <img src="html-logo.png" alt="html-logo" />
           <h2>HTML</h2>
           <p>The structure planner we can always rely on! 📔</p>
         </div>
@@ -67,7 +68,7 @@
 
       <div class="grid-item">
         <div class="news css">
-          <img class="css-logo" src="css-logo.png" alt="css-logo" />
+          <img src="css-logo.png" alt="css-logo" />
           <h2>CSS</h2>
           <p>Cascading Style Sheets, the winner of our beauty contest! 👑</p>
         </div>
@@ -75,11 +76,7 @@
 
       <div class="grid-item">
         <div class="news javascript">
-          <img
-            class="javascript-logo"
-            src="javascript-logo.png"
-            alt="javascript-logo"
-          />
+          <img src="javascript-logo.png" alt="javascript-logo" />
           <h2>Javascript</h2>
           <p>
             A real doer! The one that does not just talk around but actually
@@ -90,7 +87,7 @@
 
       <div class="grid-item">
         <div class="news react">
-          <img class="react-logo" src="react-logo.png" alt="react-logo" />
+          <img src="react-logo.png" alt="react-logo" />
           <h2>React</h2>
           <p>
             The ultimate Java-script library that makes your live smoother than
@@ -101,7 +98,7 @@
 
       <div class="grid-item">
         <div class="news c++">
-          <img class="c++-logo" src="c++-logo.png" alt="c++-logo" />
+          <img src="c++-logo.png" alt="c++-logo" />
           <h2>C++</h2>
           <p>
             The highest performer in class helping with resources and memory! 🧠
@@ -111,7 +108,7 @@
 
       <div class="grid-item">
         <div class="news redux">
-          <img class="redux-logo" src="redux-logo.png" alt="redux-logo" />
+          <img src="redux-logo.png" alt="redux-logo" />
           <h2>Redux</h2>
           <p>
             The predictable state container that helps apps to behave
@@ -122,7 +119,7 @@
 
       <div class="grid-item">
         <div class="news github">
-          <img class="github-logo" src="github-logo.png" alt="github-logo" />
+          <img src="github-logo.png" alt="github-logo" />
           <h2>Github</h2>
           <p>
             The best code hosting platform ever. There is no host like Github!
@@ -133,11 +130,7 @@
 
       <div class="grid-item">
         <div class="news soft-skills">
-          <img
-            class="soft-skills-logo"
-            src="soft-skills-logo.png"
-            alt="soft-skills-logo"
-          />
+          <img src="soft-skills-logo.png" alt="soft-skills-logo" />
           <h2>Soft skills</h2>
           <p>
             The personal attribute that enhances an individual's ability to get
