Upload initial version

--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,128 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./style.css">
+  <title>Tech Talk</title>
+</head>
+<body>
+  <header>
+    <nav>
+      <div class="logo-and-title">
+        <img src="img/techtalk-logo.png" alt="TechTalk Logo">
+        <div class="title">
+          <h1>TECH TALK</h1>
+          <p>The latest news in tech</p>
+        </div>
+      </div>
+      <div class="buttons">
+        <button>ABOUT</button>
+        <button>CONTACT</button>
+      </div>
+   </nav>
+  </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+  <h2>OUR MAIN STORY</h2>
+  <section class="big-news">
+    <div class="card headline-card">
+      <div class="headline-card-img">
+        <img src="img/mars.jpg" alt="planet mars">
+      </div>
+      <div class="headline-card-body">
+        <h3>Musk scraps spaceship plans, reveals 'space trebuchet' as new plan to transport colonists to Mars</h3>
+        <p>Tech billionaire Elon Musk announced on Tuesday a prototype for a "space trebuchet" powerful enough to fling aspiring Mars pioneers directly from Earth into space and onwards to the red planet.</p>
+      </div>
+    </div>
+  </section>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
+  <h2>OTHER NEWS</h2>
+  <section class="other-news">
+    <div class="card other-news-card">
+      <div class="other-news-card-img">
+        <img src="img/apple.jpg" alt="apple logo">
+      </div>
+      <div class="other-news-card-body">
+        <h3>Apple announces upcoming iTrebuchet</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi perferendis molestiae non nemo doloribus. Doloremque, nihil! At ea atque quidem!</p>
+      </div>
+    </div>
+
+    <div class="card other-news-card">
+      <div class="other-news-card-img">
+        <img src="img/lemur.jpg" alt="lemur">
+      </div>
+      <div class="other-news-card-body">
+        <h3>Google acquires country of Madagascar</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi perferendis molestiae non nemo doloribus. Doloremque, nihil! At ea atque quidem!</p>
+      </div>
+    </div>
+
+    <div class="card other-news-card">
+      <div class="other-news-card-img">
+        <img src="img/gamer.jpg" alt="gamer">
+      </div>
+      <div class="other-news-card-body">
+        <h3>EA to launch "Real Life Simulator" in Q4 2022</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi perferendis molestiae non nemo doloribus. Doloremque, nihil! At ea atque quidem!</p>
+      </div>
+    </div>
+
+    <div class="card other-news-card">
+      <div class="other-news-card-img">
+        <img src="img/regret.jpg" alt="regretful man">
+      </div>
+      <div class="other-news-card-body">
+        <h3>Five tech gadgets you'll regret buying a day later</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi perferendis molestiae non nemo doloribus. Doloremque, nihil! At ea atque quidem!</p>
+      </div>
+    </div>
+
+    <div class="card other-news-card">
+      <div class="other-news-card-img">
+        <img src="img/alien.jpg" alt="card-image" class="card-image">
+      </div>
+      <div class="other-news-card-body">
+        <h3>Alien technosignal finally deciphered: "Send nudes"</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi perferendis molestiae non nemo doloribus. Doloremque, nihil! At ea atque quidem!</p>
+      </div>
+    </div>
+
+    <div class="card other-news-card">
+      <div class="other-news-card-img">
+        <img src="img/microsoft.jpg" alt="microsoft apps">
+      </div>
+      <div class="other-news-card-body">
+        <h3>Microsoft changes name to Macrohard</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi perferendis molestiae non nemo doloribus. Doloremque, nihil! At ea atque quidem!</p>
+      </div>
+    </div>
+
+    <div class="card other-news-card">
+      <div class="other-news-card-img">
+        <img src="img/robodog.jpg" alt="robodog">
+      </div>
+      <div class="other-news-card-body">
+        <h3>Beyond Dogs launches first "robodog"</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi perferendis molestiae non nemo doloribus. Doloremque, nihil! At ea atque quidem!</p>
+      </div>
+    </div>
+
+    <div class="card other-news-card">
+      <div class="other-news-card-img">
+        <img src="img/cat.jpg">
+      </div>
+      <div class="other-news-card-body">
+        <h3>Beyond Cats launches first "robocat"</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi perferendis molestiae non nemo doloribus. Doloremque, nihil! At ea atque quidem!</p>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <p>This is where a real website would have a copyright notice.</p>
+  </footer>
+</body>
 </html>
+
