--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,167 @@
+
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <title>Project 2: The News Site</title>
+  <link rel="stylesheet" type="text/css" href="./style.css" />
+</head>
+<body>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
+<section class="header">
+  <div class="yarn-icon">
+  <img src="yarn-icon.png" alt="yarn-icon"></div>
+  <div class="header-sitename">
+    <h1>KNIT IT!</h1>
+  </div>
+
+  <nav>
+    <a class="link-one" href="#">Home</a>
+    <a class="link-two"href="#">About</a>
+    <div class="header-sitename-navbar">
+      <h1>KNIT IT!</h1></div>
+    <a class="link-three" href="#">Contact</a>
+    <a class="link four" href="#">More</a>
+  </nav>
+
+  <div class="header-cell img">
+    <img src="hamburger-menu.png" alt="navbar menu">
+  </div>
+
+</section>
+
+
+<section class="big-news">
+
+  <img src="yarn-one.jpg" alt="yarn-one">
+
+  <div class="big-news-text">
+    <h2>Autumn is here - let's make that sweater!</h2>
+    <p>This seasons knit-along is a warm, comfy sweater
+    that will be your savior on those long, cold winter
+    days. A combination of colors that goes together like
+    milk and honey. Come on - let´s get to it!
+     </p>
+  </div>
+</section>
+
+
+<section class="other-news">
+
+  <div class="article">
+    <div class="article-heading"> 
+      <h4>"Woll you marry me?" - All you need for a 
+        white winter wedding!
+      </h4></div>
+    <img src="yarn-two.jpg" alt="yarn-two">
+    <div class="article-text">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+        Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+        laboris nisi ut aliquip ex ea commodo consequat. </p>
+    </div>
+  </div>
+
+  <div class="article">
+    <div class="article-heading"> 
+      <h4>The best christmas presents are the ones 
+        you make yourself!
+      </h4></div>
+    <img src="yarn-three.jpg" alt="yarn-three">
+    <div class="article-text">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+        Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+        laboris nisi ut aliquip ex ea commodo consequat. </p>
+    </div>
+  </div>
+
+  <div class="article">
+    <div class="article-heading"> 
+      <h4>Five new colors from our favourite producer - 
+        get ready to order!
+      </h4></div>
+    <img src="yarn-four.jpg" alt="yarn-four">
+    <div class="article-text">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+        Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+        laboris nisi ut aliquip ex ea commodo consequat. </p>
+    </div>
+  </div>
+
+  <div class="article">
+    <div class="article-heading"> 
+      <h4>Organic knitting? Why not!</h4></div>
+    <img src="yarn-five.jpg" alt="yarn-five">
+    <div class="article-text">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+        Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+        laboris nisi ut aliquip ex ea commodo consequat. </p>
+    </div>
+  </div>
+
+  <div class="article">
+    <div class="article-heading"> 
+      <h4>"Woll you marry me?" - All you need for a 
+        white winter wedding!</h4></div>
+    <img src="yarn-two.jpg" alt="yarn-two">
+    <div class="article-text">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+        Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+        laboris nisi ut aliquip ex ea commodo consequat. </p>
+    </div>
+  </div>
+
+  <div class="article">
+    <div class="article-heading"> 
+      <h4>The best christmas presents are the ones 
+        you make yourself!</h4></div>
+    <img src="yarn-three.jpg" alt="yarn-three">
+    <div class="article-text">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+        Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+        laboris nisi ut aliquip ex ea commodo consequat. </p>
+    </div>
+  </div>
+
+  <div class="article">
+    <div class="article-heading"> 
+      <h4>Five new colors from our favourite producer - 
+        get ready to order!</h4></div>
+    <img src="yarn-four.jpg" alt="yarn-four">
+    <div class="article-text">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+        Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+        laboris nisi ut aliquip ex ea commodo consequat. </p>
+    </div>
+  </div>
+
+  <div class="article">
+    <div class="article-heading"> 
+      <h4>Organic knitting? Why not!</h4></div>
+    <img src="yarn-five.jpg" alt="yarn-five">
+    <div class="article-text">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+        Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+        laboris nisi ut aliquip ex ea commodo consequat. </p>
+    </div>
+  </div>
+
+</section>
+
+
+<section class="footer">
+  <p>@marwebdesign 2022</p>
+</section>
+</body>
 </html>
