updated absolute paths to relative paths

--- a/code/index.html
+++ b/code/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Soccer4U</title>
-  <link rel="Stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="./style.css">
 
 </head>
 
@@ -34,7 +34,7 @@
   <section class="container">
     <section class="grid-main-article">
       <div>
-        <img src="Premier League ranking.jfif" alt="Premier Leauge article">
+        <img src="./Premier League ranking.jfif" alt="Premier Leauge article">
 
         <h2><br>Premier League 2022-23 kit ranking:</h2>
         <p> Which club's jerseys are this season's best?</p>
@@ -42,44 +42,44 @@
     </section>
     <section class="grid-sub-article">
       <div class="sub-article">
-        <img class="article-image" src="Luis-Suarez.jpg" alt="La Liga article">
+        <img class="article-image" src="./Luis-Suarez.jpg" alt="La Liga article">
           <h3 class="article-text">Luis Suarez had long planned for Nacional return, yet homecoming is still surreal
           </h3>
       </div>
       <div class="sub-article">
-        <img class="article-image" src="isco.jpg" alt="Champions League article">
+        <img class="article-image" src="./isco.jpg" alt="Champions League article">
           <h3 class="article-text">Sevilla to sign Isco after Real Madrid release
           </h3>
       </div>
       <div class="sub-article">
-        <img class="article-image" src="Mbappe.jpg" alt="Champions League article">
+        <img class="article-image" src="./Mbappe.jpg" alt="Champions League article">
           <h3 class="article-text">Mbappe: Champions League is PSG's objective
           </h3>
       </div>
       <div class="sub-article">
-        <img class="article-image" src="Charles De Ketelaere.jpg" alt="Champions League article">
+        <img class="article-image" src="./Charles De Ketelaere.jpg" alt="Champions League article">
           <h3 class="article-text">Milan confirm signing of Belgium international De Ketelaere
           </h3>
       </div>
     </section>
     <section class="grid-sub-article">
       <div class="sub-article">
-        <img class="article-image" src="Robert-Lewandowski.jpg" alt="La Liga article">
+        <img class="article-image" src="./Robert-Lewandowski.jpg" alt="La Liga article">
           <h3 class="article-text">What makes Real Madrid, Robert Lewandowski special: It's all about shot quality
           </h3>
       </div>
       <div class="sub-article">
-        <img class="article-image" src="Liverpool.jpg" alt="Premier Leauge article">
+        <img class="article-image" src="./Liverpool.jpg" alt="Premier Leauge article">
           <h3 class="article-text">Liverpool rescue a point at Fulham, but could be left playing catch-up
           </h3>
       </div>
       <div class="sub-article">
-        <img class="article-image" src="Napoliorjuve.jpg" alt="Champions League article">
+        <img class="article-image" src="./Napoliorjuve.jpg" alt="Champions League article">
           <h3 class="article-text">Sassuolo managing director confirms Napoli and Juve want Raspadori
           </h3>
       </div>
       <div class="sub-article">
-        <img class="article-image" src="zlatan.jpg" alt="Champions League article">
+        <img class="article-image" src="./zlatan.jpg" alt="Champions League article">
           <h3 class="article-text">Zlatan Ibrahimovic's most colourful and controversial quotes
           </h3>
       </div>
