--- a/code/index.html
+++ b/code/index.html
@@ -4,19 +4,78 @@
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
+
+      <section id="upper-left-corner">
+        <img src="happy-logo.png" alt="happy-logo" class="logo">
+        <!-- Make a hover to this thingie to the logo with this link <a target="_blank" href="https://icons8.com/icon/63230/happy">Happy</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a> -->
+        <h1>My favourite giphys</h1>
+      </section>
+
+<!-- not sure why I use ul inside of nav, semantic yes but unnecessary? -->
+      <nav>
+        <ul> 
+          <li>Home</li>
+          <li>About</li>
+          <li>Source</li>
+        </ul>
+      </nav>
+
     </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+    <section class="giphys">
+      
+      <div class="big-giphy">
+        <img src="https://media.giphy.com/media/rACok3ykHflks/giphy.gif" alt="giphy rabbit" class="picture-big-g">
+          <div class="bid-giphy-text">  
+            <h2>Smiling rabbit</h2>
+            <p>A very happy rabbit</p>
+          </div>
+      </div>
+  
+      <div class="small-giphy">
+        <img src="https://media.giphy.com/media/12PIT4DOj6Tgek/giphy.gif" alt="giggling girl">
+        <h3> Giggling girl</h3>
+      </div>
 
-    <section class="">
-      <!-- The other news  -->
+      <div class="small-giphy">
+        <img src ="https://media.giphy.com/media/6xgslyYQCyLa8/giphy.gif" alt="angry girl">
+        <h3>Angry girl whisking a brush</h3>
+      </div>
+
+      <div class="small-giphy">
+        <img src="https://media.giphy.com/media/tQAApm4PMOpiM/giphy.gif" alt="otter holiding hands">
+        <h3>Otter holding hands</h3>
+      </div>
+
+      <div class="small-giphy">
+        <img src="https://media.giphy.com/media/Zw97g5eB1mBji/giphy.gif" alt="Very cozy">
+        <h3>Aziz Ansari in a pile of pillows</h3>
+      </div>
+      
+      <div class="small-giphy">
+        <img src="https://media.giphy.com/media/2eLktrp6ha6FW/giphy.gif" alt="Im not cranky">
+        <h3>Leslie Knope is not cranky!</h3>
+      </div>
+
+      <div class="small-giphy">
+        <img src="https://media.giphy.com/media/1xkMJIvxeKiDS/giphy.gif" alt="slow sloth">
+        <h3>A very slow sloth uses a stamp</h3>
+      </div>
+
+      <div class="small-giphy">
+        <img src="https://media.giphy.com/media/14bvjOzMN8s0x2/giphy.gif" alt="bunny sleeps">
+        <h3>Bunny fall asleep at the office</h3>
+      </div>
+
+      <div class="small-giphy">
+        <img src="https://media.giphy.com/media/3o7ZeObEUcfLbktUkg/giphy.gif" alt="rocking panda">
+        <h3>Panda on a rocking horse</h3>
+      </div>
+
     </section>
   </body>
 </html>
